--- a/Student-Portal/Views/FacultyRank/Delete.cshtml
+++ b/Student-Portal/Views/FacultyRank/Delete.cshtml
@@ -1,31 +1,34 @@
 ﻿@model Student_Portal.Models.FacultyRank
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Faculty Rank";
 }
+<div class="row justify-content-md-center">
+    <div class="col-lg-9 mt-5">
+        <div class="card">
+            <div class="card-body">
+                <h5>Are you sure you want to delete this rank?</h5>
+                <div>
+                    <hr />
+                    <dl class="dl-horizontal">
 
-<h2>Delete Faculty Rank</h2>
+                        <h3>
+                            @Html.DisplayFor(model => model.Rank)
+                        </h3>
 
-<h3>Are you sure you want to delete this rank?</h3>
-<div>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Rank)
-        </dt>
+                    </dl>
 
-        <dd>
-            @Html.DisplayFor(model => model.Rank)
-        </dd>
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
 
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                        <div class="form-actions no-color">
+                            <input type="submit" value="Delete" class="btn btn-default" /> |
+                            @Html.ActionLink("Back to List", "Index")
+                        </div>
+                    }
+                </div>
+            </div>
         </div>
-    }
+    </div>
 </div>
