--- a/Student-Portal/Views/FacultyRank/Details.cshtml
+++ b/Student-Portal/Views/FacultyRank/Details.cshtml
@@ -1,26 +1,31 @@
 ﻿@model Student_Portal.Models.FacultyRank
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Faculty Rank";
 }
+<div class="row justify-content-md-center">
+    <div class="col-lg-9 mt-5">
+        <div class="card">
+            <div class="card-body">
+                <div>
+                    <h4>View rank details</h4>
+                    <hr />
+                    <dl class="dl-horizontal">
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Rank)
+                        </dt>
 
-<h2>Rank Details</h2>
+                        <dd>
+                            @Html.DisplayFor(model => model.Rank)
+                        </dd>
 
-<div>
-    <h4>View rank details</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Rank)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Rank)
-        </dd>
-
-    </dl>
+                    </dl>
+                </div>
+                <p>
+                    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+                    @Html.ActionLink("Back to List", "Index")
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
