--- a/Student-Portal/Views/FacultyRank/Index.cshtml
+++ b/Student-Portal/Views/FacultyRank/Index.cshtml
@@ -4,32 +4,45 @@
     ViewBag.Title = "Faculty Rank";
 }
 
-<h2>Add Faculty Rank</h2>
+<div class="row justify-content-md-center">
+    <div class="col-lg-9 mt-5">
+        <p>
+            @Html.ActionLink("Add New Faculty Rank", "Create")
+        </p>
+        <div class="card">
+            <div class="card-body">
+                <h4 class="header-title">Add Roles</h4>
+                <div class="single-table">
+                    <div class="table-responsive">
+                        <table class="table table-hover table-bordered" ">
+                            <thead class="text-uppercase">
+                                <tr>
+                                    <th scope="col">
+                                        @Html.DisplayNameFor(model => model.Rank)
+                                    </th>
+                                    <th scope="col">action</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
 
-<p>
-    @Html.ActionLink("Add New Faculty Rank", "Create")
-</p>
-<table class="table table-striped table-hover">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Rank)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Rank)
+                                    </td>
+                                    <td>
+                                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                    </td>
+                                </tr>
+                            }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Rank)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-
-</table>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
