--- a/Student-Portal/Views/Home/About.cshtml
+++ b/Student-Portal/Views/Home/About.cshtml
@@ -1,7 +1,76 @@
 ﻿@{
     ViewBag.Title = "About";
+    Layout = "~/Views/Shared/_CustomLayout2.cshtml";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<p>Use this area to provide additional information.</p>
+<!--/ Intro Single star /-->
+<section class="intro-single">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-lg-8">
+                <div class="title-single-box">
+                    <h1 class="title-single">A place for learning, discovery, innovation, expression and discourse</h1>
+                </div>
+            </div>
+            <div class="col-md-12 col-lg-4">
+                <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="breadcrumb-item active" aria-current="page">
+                            About
+                        </li>
+                    </ol>
+                </nav>
+            </div>
+        </div>
+    </div>
+</section>
+<!--/ Intro Single End /-->
+<!--/ About Star /-->
+<section class="section-about">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="about-img-box">
+                    <img src="~/Content2/img/slide-about-1.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="sinse-box">
+                    <h3 class="sinse-title">
+                        CovenantUniversity
+                        <span></span>
+                        <br> Since 2002
+                    </h3>
+                    <p>401–500<sup>th</sup> World University Rankings 2020
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-12 section-t8">
+                <div class="row">
+                    <div class="col-md-6 col-lg-5">
+                        <img src="~/Content2/img/about-2.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col-lg-2  d-none d-lg-block">
+                        <div class="title-vertical d-flex justify-content-start">
+                            <span>Covenant<span class="color-b">University</span></span>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-5 section-md-t3">
+                        <div class="title-box-d">
+                            <h3 class="title-d">
+                                Raising a new
+                                <span class="color-d">generation</span> of leaders.
+                            </h3>
+                        </div>
+                        <p class="color-text-a">
+                            Covenant University is a private Christian university in Ota, Ogun State, Nigeria. It is affiliated 
+                            with Living Faith Church Worldwide and is a member of the Association of Commonwealth Universities, 
+                            Association of African Universities and National Universities Commission.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--/ About End /-->
