--- a/Student-Portal/Views/Shared/_CustomLayout.cshtml
+++ b/Student-Portal/Views/Shared/_CustomLayout.cshtml
@@ -62,8 +62,9 @@
                                         <li>@Html.ActionLink("View Users", "Index", "ViewUser")</li>
                                         <li>@Html.ActionLink("Faculty Ranks", "Index", "FacultyRank")</li> }*@
                                     <li><a href="/College"><i class="fa fa-university"></i><span>Colleges</span></a></li>
-                                    <li><a href="/Role"><i class="fa fa-user"></i><span>Roles</span></a></li>
+                                    <li><a href="/Departments"><i class="fa fa-university"></i><span>Departments</span></a></li>
                                     <li><a href="/Courses"><i class="fa fa-cubes"></i><span>Courses</span></a></li>
+                                    <li><a href="/Role"><i class="fa fa-user"></i><span>Roles</span></a></li>
                                     <li><a href="/ViewUser"><i class="fa fa-users"></i><span>View Users</span></a></li>
                                 }
                                 else if (User.IsInRole("Student"))
