--- a/Student-Portal/Views/Shared/_CustomLayout.cshtml
+++ b/Student-Portal/Views/Shared/_CustomLayout.cshtml
@@ -58,20 +58,43 @@
                                 if (User.IsInRole("Admin"))
                                 {
                                     @*<li>@Html.ActionLink("Roles", "Index", "Role")</li>
-                                        <li>@Html.ActionLink("Courses", "Index", "Courses")</li>
-                                        <li>@Html.ActionLink("View Users", "Index", "ViewUser")</li>
-                                        <li>@Html.ActionLink("Faculty Ranks", "Index", "FacultyRank")</li> }*@
+                <li>@Html.ActionLink("Courses", "Index", "Courses")</li>
+                <li>@Html.ActionLink("View Users", "Index", "ViewUser")</li>
+                <li>@Html.ActionLink("Faculty Ranks", "Index", "FacultyRank")</li> }*@
                                     <li><a href="/College"><i class="fa fa-university"></i><span>Colleges</span></a></li>
-                                    <li><a href="/Departments"><i class="fa fa-university"></i><span>Departments</span></a></li>
+                                    <li><a href="/Departments"><i class="fa fa-building-o"></i><span>Departments</span></a></li>
+
+                                    <li class="">
+                                        <a href="javascript:void(0)" aria-expanded="false">
+                                            <i class="fa fa-money"></i> <span>
+                                                Salary
+                                            </span>
+                                        </a>
+                                        <ul class="collapse" style="height: 0px;">
+                                            <li><a href="/SalaryStructures"><i class="fa fa-files-o"></i><span>Salary Structure</span></a></li>
+                                            <li><a href="/Salaries"><i class="fa fa-table"></i><span>Salaries</span></a></li>
+                                        </ul>
+                                    </li>
+
+                                    <li class="">
+                                        <a href="javascript:void(0)" aria-expanded="false">
+                                            <i class="fa fa-user-plus"></i> <span>
+                                                Ranks
+                                            </span>
+                                        </a>
+                                        <ul class="collapse" style="height: 0px;">
+                                            <li><a href="/Role"><i class="fa fa-user"></i><span>Roles</span></a></li>
+                                            <li><a href="/ViewUser"><i class="fa fa-users"></i><span>View Users</span></a></li>
+                                        </ul>
+                                    </li>
+
                                     <li><a href="/Courses"><i class="fa fa-cubes"></i><span>Courses</span></a></li>
-                                    <li><a href="/Role"><i class="fa fa-user"></i><span>Roles</span></a></li>
-                                    <li><a href="/ViewUser"><i class="fa fa-users"></i><span>View Users</span></a></li>
                                 }
                                 else if (User.IsInRole("Student"))
                                 {
                                     <li><a href="/RegisterCourse"><i class="fa fa-book"></i><span>Register Course</span></a></li>
                                 }
-                                else if (User.IsInRole("Faculty") )
+                                else if (User.IsInRole("Faculty"))
                                 {
                                     <li><a href="/Courses"><i class="fa fa-cubes"></i><span>Courses</span></a></li>
                                 }
