--- a/Student-Portal/Views/ViewUser/RegisterFaculty.cshtml
+++ b/Student-Portal/Views/ViewUser/RegisterFaculty.cshtml
@@ -143,6 +143,13 @@ else
             </div>
         </div>
     </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.StructId, "Salary Structue Type", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownList("StructId", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.StructId, "", new { @class = "text-danger" })
+        </div>
+    </div>
 
     if (User.IsInRole("Admin"))
     {
