--- a/Student-Portal/Views/Shared/_CustomLayout.cshtml
+++ b/Student-Portal/Views/Shared/_CustomLayout.cshtml
@@ -94,10 +94,25 @@
                                 {
                                     <li><a href="/RegisterCourse"><i class="fa fa-book"></i><span>Register Course</span></a></li>
                                 }
-                                else if (User.IsInRole("Faculty"))
+                                else if (User.IsInRole("Non-teaching Staff"))
                                 {
-                                    <li><a href="/Courses"><i class="fa fa-cubes"></i><span>Courses</span></a></li>
                                     <li><a href="/Salaries"><i class="fa fa-table"></i><span>Salary</span></a></li>
+                                }
+                                else
+                                {
+                                    <li class="">
+                                        <a href="javascript:void(0)" aria-expanded="false">
+                                            <i class="fa fa-book"></i> <span>
+                                                My Course
+                                            </span>
+                                        </a>
+                                        <ul class="collapse" style="height: 0px;">
+                                            <li><a href="/Courses"><i class="fa fa-cubes"></i><span>Courses</span></a></li>
+                                            <li><a href="/CourseParticipants"><i class="fa fa-users"></i><span>Course Participants</span></a></li>
+                                            <li><a href="/CourseParticipants/Approval"><i class="fa fa-info-circle"></i><span>Approval Requests</span></a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="/Salaries"><i class="fa fa-table"></i><span>Salary Breakdown</span></a></li>
                                 }
                             }
                         </ul>
